--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
 	  <title>Benjamin G. Neel, M.D., Ph.D.</title>
 	  
-<!--
-	  <link rel="stylesheet" href="css/style.css">
+
+	  <link rel="stylesheet" href="style.css">
 	  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 		<link rel="icon" href="/favicon.ico" type="image/x-icon">
@@ -23,15 +23,15 @@
 	  <!--[if lt IE 9]>
 	  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 	  <![endif]-->
--->
+
 		</head>
 
 	<body>
-<!--
+
 		<div class="container-info">
 			<a name="top-mobile"></a>
 			<div class="info-main">
-				<div class="info__headshot"><img class="info__headshot-img" src="images/ben_neel_half.jpg">
+				<div class="info__headshot"><img class="info__headshot-img" src="ben_neel_half.jpg">
         </div>
 				<div class="info__elevator">
 					<h1 class="info__elevator-text">
@@ -180,7 +180,7 @@
 		  ga('send', 'pageview');
 		</script>
 		<script src="js/nodePattern.js"></script>
--->
+
 	</body>
 
 </html>
