--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width">
-		<meta name="description" content="Benjamin G. Neel, M.D., Ph.D. | Cancer Researcher">
+		<meta name="description" content="Benjamin G. Neel, M.D., Ph.D.">
 	
 
 	  <title>Benjamin G. Neel, M.D., Ph.D.</title>
@@ -35,7 +35,7 @@
         </div>
 				<div class="info__elevator">
 					<h1 class="info__elevator-text">
-						Benjamin G. Neel, M.D., Ph.D. | Cancer Researcher
+						Benjamin G. Neel, M.D., Ph.D.
 					</h1>
 				</div>
 				<p>Working to cure cancer in our lifetime. </p>
@@ -47,10 +47,12 @@
 			<div class="main__container-about">
 				<div class="main__tag">About Me</div>
 				<p class="main__copy">
-        some bio sketch here
+        I have a longstanding interest in signaling pathways regulating normal cell proliferation and their derangement in human disease, especially cancer. 
+	My research focuses on cellular signaling, with a particular interest in the biology and regulation of protein-tyrosine 
+	phosphatases, the role of RAS/ERK pathway mutations in developmental disease and malignancy, and the biology of breast and ovarian cancer.  
         </p>
 			</div> <!--main_container-about-->
-
+<!--
 			<div class="main__container-projects">
 			
 				<div class="main__tag">Research</div>
@@ -60,28 +62,33 @@
 					<p class="main__project-description">
           description
 				  </p>
-				</div> <!--main_project-first-->
+				</div> 
 
                 <div class="main__project">
 					<h2 class="main__project-title">project-2 with a link</h2>
 					<p class="main__project-description">
 					description
 					</p>
-				</div> <!--main_project 2-->
+				</div> 
 
 				<div class="main__project">
 					<h2 class="main__project-title">project-3 with a link</h2>
 					<p class="main__project-description">
 						description
 					</p>
-				</div> <!--main_project 3-->
-			</div> <!--main_container-projects-->
+				</div> 
 
+			</div> 
+-->
 			<div class="main__container-clients">
 
 				<div class="main__tag">Biotech Industry Activity</div>
 				<p class="main__copy">
-					 list of companies i have co-founded with links
+					Jengu, co-founder<br>
+					Navire, co-founder<br>
+					Northern Biologics, co-founder<br>
+					Arvinas, SAB Member
+					
 				</p>
 			</div> <!--main__container-clients-->
 
@@ -142,20 +149,21 @@
 
 			</div> <!--main_container-experiences-->
 
-			<div class="main__container-resume">
+<!--			<div class="main__container-resume">
         link to complete CV
 			</div>
 
-		<div class="main__container-clients">
+		<div class="main__container-pubs">
+-->
 
 				<div class="main__tag">Publications</div>
 				<p class="main__copy">
         Updated publications list at <a href="https://pubmed.ncbi.nlm.nih.gov/?term=Neel+BG">PubMed</a>
 				</p>
 			</div>
-  </div> <!--main_container-clients-->
+  </div> <!--main_container-pubs-->
 
-<div class="main__container-projects">
+<div class="main__container-links">
 			
 				<div class="main__tag">Related Links</div>
 
@@ -166,7 +174,7 @@
                 <div class="main__project">
 					<h2 class="main__project-title"><a href="https://med.nyu.edu/faculty/benjamin-g-neel"> My NYU Faculty page<a></h2>
 				</div> 
-</div> <!--main_container-projects-->
+</div> <!--main_container-links-->
             
 
 
