--- a/index.html
+++ b/index.html
@@ -149,32 +149,28 @@
 
 			</div> <!--main_container-experiences-->
 
-<!--			<div class="main__container-resume">
-        link to complete CV
-			</div>
+					<div class="main__container-pubs">
 
-		<div class="main__container-pubs">
--->
 
-				<div class="main__tag">Publications</div>
-				<p class="main__copy">
-        Updated publications list at <a href="https://pubmed.ncbi.nlm.nih.gov/?term=Neel+BG">PubMed</a>
-				</p>
-			</div>
+<div class="main__container-pubs">
+	<div class="main__tag">Publications</div>
+		<p class="main__copy">
+        	Updated publications list at <a href="https://pubmed.ncbi.nlm.nih.gov/?term=Neel+BG">PubMed</a>
+		</p>
   </div> <!--main_container-pubs-->
 
 <div class="main__container-links">
-			
-				<div class="main__tag">Related Links</div>
+	<div class="main__tag">Related Links</div>
+		<h2 class="main__project-title"><href="theneellab.com>The Neel Lab website</a></h2>
+		<h2 class="main__project-title"><a href="https://med.nyu.edu/faculty/benjamin-g-neel"> My NYU Faculty page<a></h2>
+	</div> <!--main_container-links-->
 
-                <div class="main__project--first">
-					<h2 class="main__project-title"><href="theneellab.com>The Neel Lab website</a></h2>
-				</div>
 
-                <div class="main__project">
-					<h2 class="main__project-title"><a href="https://med.nyu.edu/faculty/benjamin-g-neel"> My NYU Faculty page<a></h2>
-				</div> 
-</div> <!--main_container-links-->
+<div class="main__container-resume">
+
+			</div> <!--main_container-resume-->
+
+
             
 
 
