--- a/index.html
+++ b/index.html
@@ -161,14 +161,15 @@
 
 <div class="main__container-links">
 	<div class="main__tag">Related Links</div>
-		<h2 class="main__project-title"><href="theneellab.com>The Neel Lab website</a></h2>
-		<h2 class="main__project-title"><a href="https://med.nyu.edu/faculty/benjamin-g-neel"> My NYU Faculty page<a></h2>
+		<p class="main__copy">
+			<href="https://theneellab.com/>The Neel Lab website</a><br>
+			<a href="https://med.nyu.edu/faculty/benjamin-g-neel"> My NYU Faculty page<a><br>
 	</div> <!--main_container-links-->
 
 
 <div class="main__container-resume">
 
-			</div> <!--main_container-resume-->
+	</div> <!--main_container-resume-->
 
 
             
