--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
 						Benjamin G. Neel, M.D., Ph.D.
 					</h1>
 				</div>
-				<p>Working to cure cancer in our lifetime. </p>
+				<div class="info__tag">Working to cure cancer in our lifetime. 
+				</div>
 			</div> <!--info-main-->
 		</div> <!--container-info-->
 
