--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 <div class="main__container-links">
 	<div class="main__tag">Related Links</div>
 		<p class="main__copy">
-			<href="https://theneellab.com/>The Neel Lab website</a><br>
+			<a href="https://theneellab.com/>The Neel Lab website</a><br>
 			<a href="https://med.nyu.edu/faculty/benjamin-g-neel"> My NYU Faculty page<a><br>
 	</div> <!--main_container-links-->
 
