--- a/index.html
+++ b/index.html
@@ -163,8 +163,10 @@
 <div class="main__container-links">
 	<div class="main__tag">Related Links</div>
 		<p class="main__copy">
-			<a href="https://theneellab.com/>The Neel Lab website</a><br>
-			<a href="https://med.nyu.edu/faculty/benjamin-g-neel"> My NYU Faculty page<a><br>
+			<a href="https://theneellab.com/">The Neel Lab website</a>
+				 <br>
+			<a href="https://med.nyu.edu/faculty/benjamin-g-neel"> My NYU Faculty page<a>
+		</p>
 	</div> <!--main_container-links-->
 
 
