--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
 					<div class="main__experience-info">
 						<div class="main__experience-info-company">Beth Israel Deaconess Medical Center, Boston, MA</div>
 						<div class="main__experience-info-position">Deputy Director, Basic Research, Hematology/Oncology Division (2003 - 2007)</div>
+						<div class="main__experience-info-position">Director, Cancer Biology Program (1994 - 2007)</div>
 					</div>
 				</div> <!--main_experience-->
 
