--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
 
 				<div class="main__tag">Biotech Industry Activity</div>
 				<p class="main__copy">
-					Jengu, co-founder<br>
-					Navire, co-founder<br>
-					Northern Biologics, co-founder<br>
-					Arvinas, SAB Member
+					Jengu Therapeutics, co-founder<br>
+					<a href="https://navirepharma.com/">Navire Pharma</a>, co-founder and SAB member<br>
+					<a href="https://northernbiologics.com/">Northern Biologics</a>, co-founder<br>
+					<a href="https://www.arvinas.com/">Arvinas, Inc.</a>, SAB Member
 					
 				</p>
 			</div> <!--main__container-clients-->
