--- a/index.html
+++ b/index.html
@@ -48,9 +48,20 @@
 			<div class="main__container-about">
 				<div class="main__tag">About Me</div>
 				<p class="main__copy">
-        I have a longstanding interest in signaling pathways regulating normal cell proliferation and their derangement in human disease, especially cancer. 
-	My research focuses on cellular signaling, with a particular interest in the biology and regulation of protein-tyrosine 
-	phosphatases, the role of RAS/ERK pathway mutations in developmental disease and malignancy, and the biology of breast and ovarian cancer.  
+        As a physician-scientist, I believe that we have the best chance at
+dramatically impacting patient survival when scientists and physicians
+work together to understand the biology of cancer and its
+vulnerabilities and to then translate this understanding from the bench to the bedside.</p>
+	<p class="main__copy">
+	My own research focuses on cellular signaling pathways regulating
+normal cell proliferation and differentiation, and how disruption of these
+pathways can cause human disease, especially cancer. I have a
+particular interest in the biology and regulation of specific
+molecules called <i>protein-tyrosine
+phosphatases</i> which are involved in many normal cell functions
+<needs a follow on clause saying why this is important>. I also study
+the role of RAS/ERK pathway mutations in developmental disease and
+cancer and the biology of breast and ovarian cancers. 
         </p>
 			</div> <!--main_container-about-->
 <!--
@@ -85,7 +96,7 @@
 
 				<div class="main__tag">Biotech Industry Activity</div>
 				<p class="main__copy">
-					Jengu Therapeutics, co-founder<br>
+					Jengu Therapeutics, co-founder and SAB member<br>
 					<a href="https://navirepharma.com/">Navire Pharma</a>, co-founder and SAB member<br>
 					<a href="https://northernbiologics.com/">Northern Biologics</a>, co-founder<br>
 					<a href="https://www.arvinas.com/">Arvinas, Inc.</a>, SAB Member
@@ -127,12 +138,29 @@
 						<div class="main__experience-info-position">Director, Research (2007 - 2014)</div>
 					</div>
 				</div> <!--main_experience-->
+	<div class="main__experience">
+					
+					<div class="main__experience-info">
+						<div class="main__experience-info-company">University of Toronto, Toronto, ON</div>
+						<div class="main__experience-info-position">Professor of Medical Biophysics (2007 - 2015)</div>
+						<div class="main__experience-info-position">Canada Research Chair, Tier 1 (2007 - 2015)</div>
+					</div>
+				</div> <!--main_experience-->
 
-				<div class="main__experience">
+	<div class="main__experience">
 					<div class="main__experience-info">
 						<div class="main__experience-info-company">Beth Israel Deaconess Medical Center, Boston, MA</div>
 						<div class="main__experience-info-position">Deputy Director, Basic Research, Hematology/Oncology Division (2003 - 2007)</div>
 						<div class="main__experience-info-position">Director, Cancer Biology Program (1994 - 2007)</div>
+					</div>
+				</div> <!--main_experience-->
+	<div class="main__experience">
+					<div class="main__experience-info">
+						<div class="main__experience-info-company">Harvard Medical School, Boston, MA</div>
+						<div class="main__experience-info-position">William B. Castle Professor of Medicine (2006 - 2007</div>
+						<div class="main__experience-info-position">Professor of Medicine (1999 - 2007)</div>
+						<div class="main__experience-info-position">Associate Professor of Medicine (1993 - 1999)</div>
+						<div class="main__experience-info-position">Assistant Professor of Medicine (1988 - 1993)</div>
 					</div>
 				</div> <!--main_experience-->
 
@@ -153,7 +181,7 @@
 		<p class="main__copy">
 			<a href="https://theneellab.com/">The Neel Lab website</a>
 				 <br>
-			<a href="https://med.nyu.edu/faculty/benjamin-g-neel"> My NYU Faculty page<a>
+			<a href="https://med.nyu.edu/faculty/benjamin-g-neel"> Benjamin G. Neel NYU Faculty page<a>
 		</p>
 	</div> <!--main_container-links-->
 
