--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
         As a physician-scientist, I believe that we have the best chance at
 dramatically impacting patient survival when scientists and physicians
 work together to understand the biology of cancer and its
-vulnerabilities and to then translate this understanding from the bench to the bedside.</p>
-	<p class="main__copy">
+vulnerabilities and to then translate this understanding from the bench to the bedside.
+					<br>&nbsp; <br>
 	My own research focuses on cellular signaling pathways regulating
 normal cell proliferation and differentiation, and how disruption of these
 pathways can cause human disease, especially cancer. I have a
