--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@ cancer and the biology of breast and ovarian cancers.
 				<div class="main__tag">Biotech Industry Activity</div>
 				<p class="main__copy">
 					Jengu Therapeutics, co-founder and SAB member<br>
-					<a href="https://navirepharma.com/">Navire Pharma</a>, co-founder and SAB member<br>
-					<a href="https://northernbiologics.com/">Northern Biologics</a>, co-founder<br>
-					<a href="https://www.arvinas.com/">Arvinas, Inc.</a>, SAB Member
+					<a href="https://navirepharma.com/" target="_blank">Navire Pharma</a>, co-founder and SAB member<br>
+					<a href="https://northernbiologics.com/" target="_blank">Northern Biologics</a>, co-founder<br>
+					<a href="https://www.arvinas.com/" target="_blank">Arvinas, Inc.</a>, SAB Member
 					
 				</p>
 			</div> <!--main__container-clients-->
@@ -172,16 +172,16 @@ cancer and the biology of breast and ovarian cancers.
 <div class="main__container-pubs">
 	<div class="main__tag">Publications</div>
 		<p class="main__copy">
-        	Updated publications list at <a href="https://pubmed.ncbi.nlm.nih.gov/?term=Neel+BG">PubMed</a>
+        	Updated publications list at <a href="https://pubmed.ncbi.nlm.nih.gov/?term=Neel+BG" target="_blank">PubMed</a>
 		</p>
   </div> <!--main_container-pubs-->
 
 <div class="main__container-links">
 	<div class="main__tag">Related Links</div>
 		<p class="main__copy">
-			<a href="https://theneellab.com/">The Neel Lab website</a>
+			<a href="https://theneellab.com/" target="_blank">The Neel Lab website</a>
 				 <br>
-			<a href="https://med.nyu.edu/faculty/benjamin-g-neel"> Benjamin G. Neel NYU Faculty page<a>
+			<a href="https://med.nyu.edu/faculty/benjamin-g-neel" target="_blank"> Benjamin G. Neel NYU Faculty page<a>
 		</p>
 	</div> <!--main_container-links-->
 
