--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ molecules called <i>protein-tyrosine
 phosphatases</i> which are involved in many normal cell functions
 <needs a follow on clause saying why this is important>. I also study
 the role of RAS/ERK pathway mutations in developmental disease and
-cancer and the biology of breast and ovarian cancers. 
+cancer, and the biology of breast and ovarian cancers. 
         </p>
 			</div> <!--main_container-about-->
 <!--
