--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 		<div class="container-info">
 			<a name="top-mobile"></a>
 			<div class="info-main">
+				<div class="foo">
 				<div class="info__headshot"><img class="info__headshot-img" src="ben_neel_half.jpg">
         </div>
 				<div class="info__elevator">
@@ -40,6 +41,7 @@
 				</div>
 				<div class="info__tag">Working to cure cancer in our lifetime. 
 				</div>
+				</div> <!-- close foo -->
 			</div> <!--info-main-->
 		</div> <!--container-info-->
 
@@ -48,19 +50,18 @@
 			<div class="main__container-about">
 				<div class="main__tag">About Me</div>
 				<p class="main__copy">
-        As a physician-scientist, I believe that we have the best chance at
-dramatically impacting patient survival when scientists and physicians
+        As a physician-scientist, I believe that we have the best chance of
+ impacting patient survival when scientists and physicians
 work together to understand the biology of cancer and its
-vulnerabilities and to then translate this understanding from the bench to the bedside.
+vulnerabilities, and to then translate this understanding from the bench to the bedside.
 					<br>&nbsp; <br>
 	My own research focuses on cellular signaling pathways regulating
 normal cell proliferation and differentiation, and how disruption of these
-pathways can cause human disease, especially cancer. I have a
+pathways can cause human diseases, especially cancer. I have a
 particular interest in the biology and regulation of specific
 molecules called <i>protein-tyrosine
-phosphatases</i> which are involved in many normal cell functions
-<needs a follow on clause saying why this is important>. I also study
-the role of RAS/ERK pathway mutations in developmental disease and
+phosphatases</i> which are involved in many normal cell functions. I also study
+the role of RAS/ERK pathway mutations in developmental diseases and
 cancer, and the biology of breast and ovarian cancers. 
         </p>
 			</div> <!--main_container-about-->
