--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
 				</div>
 				</div> <!-- close foo -->
 			</div> <!--info-main-->
+			<div class="info-footer">
+				<div class="info-footer__social">
+					<a href="https://www.linkedin.com/in/benjamin-neel-51951824/" target="_blank" class="fa fa-linkedin info-footer__social-icon--linkedin"></a>
+				</div>
+			</div>
 		</div> <!--container-info-->
 
 		<div class="container-main">
