--- a/index.html
+++ b/index.html
@@ -43,11 +43,6 @@
 				</div>
 				</div> <!-- close foo -->
 			</div> <!--info-main-->
-			<div class="info-footer">
-				<div class="info-footer__social">
-					<a href="https://www.linkedin.com/in/benjamin-neel-51951824/" target="_blank" class="fa fa-linkedin info-footer__social-icon--linkedin"></a>
-				</div>
-			</div>
 		</div> <!--container-info-->
 
 		<div class="container-main">
@@ -172,9 +167,6 @@ cancer, and the biology of breast and ovarian cancers.
 
 			</div> <!--main_container-experiences-->
 
-					<div class="main__container-pubs">
-
-
 <div class="main__container-pubs">
 	<div class="main__tag">Publications</div>
 		<p class="main__copy">
@@ -196,19 +188,8 @@ cancer, and the biology of breast and ovarian cancers.
 
 	</div> <!--main_container-resume-->
 
-
+</div> <!-- container-main -->
             
-
-
-		<script>
-		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-		  ga('create', 'UID goes here', 'auto');
-		  ga('send', 'pageview');
-		</script>
 		<script src="js/nodePattern.js"></script>
 
 	</body>
