--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ cancer, and the biology of breast and ovarian cancers.
 				<p class="main__copy">
 					Jengu Therapeutics, co-founder and SAB member<br>
 					<a href="https://navirepharma.com/" target="_blank">Navire Pharma</a>, co-founder and SAB member<br>
-					<a href="https://northernbiologics.com/" target="_blank">Northern Biologics</a>, co-founder<br>
+					Northern Biologics, co-founder<br>
 					<a href="https://www.arvinas.com/" target="_blank">Arvinas, Inc.</a>, SAB Member
 					
 				</p>
