--- a/index.html
+++ b/index.html
@@ -98,11 +98,14 @@ cancer, and the biology of breast and ovarian cancers.
 
 				<div class="main__tag">Biotech Industry Activity</div>
 				<p class="main__copy">
-					Jengu Therapeutics, co-founder and SAB member<br>
-					<a href="https://navirepharma.com/" target="_blank">Navire Pharma</a>, co-founder and SAB member<br>
-					Northern Biologics, co-founder<br>
-					<a href="https://www.arvinas.com/" target="_blank">Arvinas, Inc.</a>, SAB Member
-					
+					<ul>
+					<li>Jengu Therapeutics, co-founder and SAB member.</li>
+					<li><a href="https://navirepharma.com/" target="_blank">Navire Pharma</a>, co-founder and SAB member.</li>
+					<li><a href="https://www.boehringer-ingelheim.com/press-release/acquisitionofnorthernbiologics" target="_blank">Northern Biologics</a>, co-founder. 
+						Acquired by Boehringer Ingelheim in May, 2020.</li>
+					<li><a href="https://www.arvinas.com/" target="_blank">Arvinas, Inc.</a>, SAB Member.</li>
+					<li><a href="https://www.recursion.com/" target="_blank">Recursion</a>, Advisor.</li>
+				</ul>
 				</p>
 			</div> <!--main__container-clients-->
 
