--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ cancer, and the biology of breast and ovarian cancers.
 					<a href="https://www.boehringer-ingelheim.com/press-release/acquisitionofnorthernbiologics" target="_blank">Northern Biologics</a>, co-founder. 
 						Acquired by Boehringer Ingelheim in May, 2020<br>
 					<a href="https://www.arvinas.com/" target="_blank">Arvinas, Inc.</a>, SAB Member<br>
-					<a href="https://www.recursion.com/" target="_blank">Recursion</a>, SAB Member<br>
+					<a href="https://www.recursion.com/" target="_blank">Recursion</a>, SAB Member
 				
 				</p>
 			</div> <!--main__container-clients-->
@@ -150,6 +150,7 @@ cancer, and the biology of breast and ovarian cancers.
 	<div class="main__tag">Publications</div>
 		<p class="main__copy">
         	Updated publications list on <a href="https://pubmed.ncbi.nlm.nih.gov/?term=Neel+BG" target="_blank">PubMed</a>
+			
 		</p>
   </div> <!--main_container-pubs-->
 
@@ -159,7 +160,7 @@ cancer, and the biology of breast and ovarian cancers.
 			<a href="https://theneellab.com/" target="_blank">The Neel Lab website</a>
 				 <br>
 			<a href="https://med.nyu.edu/faculty/benjamin-g-neel" target="_blank"> Benjamin G. Neel NYU Faculty page<a>
-				<br>
+
 		</p>
 	</div> <!--main_container-links-->
 
