--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 	  <title>Benjamin G. Neel, M.D., Ph.D.</title>
 	  
 
-	  <link rel="stylesheet" href="style.css">
+	  <link rel="stylesheet" href="./style.css">
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700;800&display=swap" rel="stylesheet">
-	  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+<!-- 	  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"> -->
 		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 		<link rel="icon" href="/favicon.ico" type="image/x-icon">
 
