--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@ cancer, and the biology of breast and ovarian cancers.
 
 </div> <!-- container-main -->
             
-		<script src="js/nodePattern.js"></script>
-
+<!-- 		<script src="js/nodePattern.js"></script>
+ -->
 	</body>
 
 </html>
