--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@ molecules called <i>protein-tyrosine
 phosphatases</i> which are involved in many normal cell functions. I also study
 the role of RAS/ERK pathway mutations in developmental diseases and
 cancer, and the biology of breast and ovarian cancers. 
+					<br>&nbsp; <br>
         </p>
 			</div> <!--main_container-about-->
 
@@ -129,8 +130,9 @@ cancer, and the biology of breast and ovarian cancers.
 				<div class="main__experience">
 					<div class="main__experience-info">
 						<div class="main__experience-info-company">Beth Israel Deaconess Medical Center, Boston, MA</div>
-						<div class="main__experience-info-position">Deputy Director, Basic Research, Hematology/Oncology Division (2003 - 2007)</div>
-						<div class="main__experience-info-position">Director, Cancer Biology Program (1994 - 2007)</div>
+						<div class="main__experience-info-position">Deputy Director, Basic Research, Hematology/Oncology Division (2003 - 2007)
+						<br>	
+						Director, Cancer Biology Program (1994 - 2007)</div>
 					</div>
 				</div> <!--main_experience-->
 				
