--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@ phosphatases</i> which are involved in many normal cell functions. I also study
 the role of RAS/ERK pathway mutations in developmental diseases and
 cancer, and the biology of breast and ovarian cancers. 
 					<br>&nbsp; <br>
+		I am a member of the <a href="https://aap-online.org/">American Academy of Physicians</a> and the <a href="http://www.nasonline.org/">
+					National Academy of Sciences</a>. 
         </p>
 			</div> <!--main_container-about-->
 
