--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@ cancer, and the biology of breast and ovarian cancers.
 					<br>&nbsp; <br>
 		I am a member of the <a href="https://aap-online.org/">American Academy of Physicians</a> and the <a href="http://www.nasonline.org/">
 					National Academy of Sciences</a>. 
+					<br>&nbsp; <br>
         </p>
 			</div> <!--main_container-about-->
 
