--- a/index2.html
+++ b/index2.html
@@ -1,144 +1,133 @@
-{\rtf1\ansi\ansicpg1252\cocoartf2639
-\cocoatextscaling0\cocoaplatform0{\fonttbl\f0\fswiss\fcharset0 Helvetica;}
-{\colortbl;\red255\green255\blue255;\red67\green67\blue67;\red225\green228\blue230;}
-{\*\expandedcolortbl;;\cssrgb\c33333\c33333\c33333;\cssrgb\c90588\c91373\c92157;}
-{\*\listtable{\list\listtemplateid1\listhybrid{\listlevel\levelnfc23\levelnfcn23\leveljc0\leveljcn0\levelfollow0\levelstartat1\levelspace360\levelindent0{\*\levelmarker \{none\}}{\leveltext\leveltemplateid1\'00;}{\levelnumbers;}\fi-360\li720\lin720 }{\listname ;}\listid1}}
-{\*\listoverridetable{\listoverride\listid1\listoverridecount0\ls1}}
-\margl1440\margr1440\vieww12280\viewh11520\viewkind0
-\deftab720
-\pard\tx220\tx720\pardeftab720\li720\fi-720\partightenfactor0
-\ls1\ilvl0
-\f0\fs24 \cf2 \cb3 <!DOCTYPE html>\
-<html>\
-<head>\
-<style>\
-.item1 \{ grid-area: header; text-align: center;font-family: "Open Sans", "Helvetica Neue", sans-serif;  color: #4c6493;\
-  font-weight: 700;\}\
-.item2 \{ grid-area: aboutme; text-align: left;font-family: "Open Sans", "Helvetica Neue", sans-serif; font-size: 15px;font-weight: 700;\
-  letter-spacing: 1px;\
-  text-transform: uppercase; color: #4c6493;\}\
-.item3 \{ grid-area: right1; text-align: left;font-family: "Open Sans", "Helvetica Neue", sans-serif;\
-  font-size: 15px;\}\
-.item4 \{ grid-area: biotech; text-align: left;font-family: "Open Sans", "Helvetica Neue", sans-serif; font-size: 15px;font-weight: 700;\
-  letter-spacing: 1px;\
-  text-transform: uppercase; color: #4c6493;\}\
-.item5 \{ grid-area: right2; text-align: left;font-family: "Open Sans", "Helvetica Neue", sans-serif;\
-  font-size: 15px;\}\
-.item6 \{ grid-area: academic; text-align: left;font-family: "Open Sans", "Helvetica Neue", sans-serif; font-size: 15px;font-weight: 700;\
-  letter-spacing: 1px; \
-  text-transform: uppercase; color: #4c6493;\}\
-.item7 \{ grid-area: right3; text-align: left;font-family: "Open Sans", "Helvetica Neue", sans-serif;font-size: 15px;\}\
-.item8 \{ grid-area: pubs; text-align: left;font-family: "Open Sans", "Helvetica Neue", sans-serif; font-size: 15px;font-weight: 700;\
-  letter-spacing: 1px;\
-  text-transform: uppercase; color: #4c6493;\}\
-.item9 \{ grid-area: right4; text-align: left;font-family: "Open Sans", "Helvetica Neue", sans-serif;\
-  font-size: 15px;\}\
-.item10\{ grid-area: related; text-align: left;font-family: "Open Sans", "Helvetica Neue", sans-serif;\
-  font-size: 15px;font-weight: 700;\
-  letter-spacing: 1px;\
-  text-transform: uppercase; color: #4c6493;\}\
-.item11 \{ grid-area: right5; text-align: left;font-family: "Open Sans", "Helvetica Neue", sans-serif;\
-  font-size: 15px;\}\
-\
-.grid-container \{\
-  display: grid;\
-  grid-template-columns: auto auto  ;\
-  grid-template-areas:\
-    'header header'\
-    ' aboutme right1'\
-    ' biotech right2'\
-    ' academic right3'\
-    ' pubs right4'\
-    ' related right5'\
-    ;\
-  gap: 5px;\
-  background-color: #ffffff;\
-  padding: 20px;\
-\}\
-\
-.grid-container > div \{\
-  background-color: rgba(255, 255, 255, 0.8);\
-  \
-  padding: 20px 0;\
-  \
-\}\
-\
-.item1 \{\
-  grid-colum: 1 / 3;\
-\}\
-</style>\
-</head>\
-<body>\
-\
-<div class="grid-container">\
-  <div class="item1"><img src="ben_neel_half.jpg">\
-  <h1>Benjamin G. Neel, M.D., Ph.D.</h1>\
-<h2><i>Working to cure cancer in our lifetime.</i></h2>\
-</div>\
-  <div class="item2">About Me</div>\
-  <div class="item3">As a physician-scientist, I believe that we have the best chance of\
- impacting patient survival when scientists and physicians\
-work together to understand the biology of cancer and its\
-vulnerabilities, and to then translate this understanding from the bench to the bedside.\
-					<br>&nbsp; <br>\
-	My own research focuses on cellular signaling pathways regulating\
-normal cell proliferation and differentiation, and how disruption of these\
-pathways can cause human diseases, especially cancer. I have a\
-particular interest in the biology and regulation of specific\
-molecules called <i>protein-tyrosine\
-phosphatases</i> which are involved in many normal cell functions. I also study\
-the role of RAS/ERK pathway mutations in developmental diseases and\
-cancer, and the biology of breast and ovarian cancers. \
-					<br>&nbsp; <br>\
-		I am a member of the <a href="https://aap-online.org/">American Academy of Physicians</a> and the <a href="http://www.nasonline.org/"> National Academy of Sciences</a>. \
-</div>  \
-  <div class="item4">Biotech</div>\
-  <div class="item5">Lighthorse Therapeutics, co-founder and SAB member<br>\
-					<a href="https://navirepharma.com/" target="_blank">Navire Pharma</a>, co-founder and SAB member<br>\
-					<a href="https://www.boehringer-ingelheim.com/press-release/acquisitionofnorthernbiologics" target="_blank">Northern Biologics</a>, co-founder. \
-						Acquired by Boehringer Ingelheim in May, 2020<br>\
-					<a href="https://www.arvinas.com/" target="_blank">Arvinas, Inc.</a>, SAB Member<br>\
-					<a href="https://www.recursion.com/" target="_blank">Recursion</a>, SAB Member</div>\
-  <div class="item6">Academic</div>\
-  <div class="item7">Laura and Isaac Perlmutter Cancer Center at NYU Langone Medical Center<br>\
-  Director (2015 - present)<br>\
-  NYU School of Medicine<br>\
-  Professor, Department of Medicine (2015 - present)\
-  <p>\
-  The Campbell Family Institute for Cancer Research, Toronto, ON<br>\
-	Founding Director (2008 - 2014)\
-    </p>\
-    <p>\
-	Princess Margaret Hospital Cancer Center, Toronto, ON<br>\
-		Director, Research (2007 - 2014)\
-        </p><p>\
-        University of Toronto, Toronto, ON<br>\
-		Professor of Medical Biophysics (2007 - 2015)<br>\
-		Canada Research Chair, Tier 1 (2007 - 2015)\
-        </p><p>\
-        Beth Israel Deaconess Medical Center, Boston, MA<br>\
-		Deputy Director, Basic Research, Hematology/Oncology Division (2003 - 2007)<br>\
-		Director, Cancer Biology Program (1994 - 2007)<br>\
-		</p><p>\
-        Harvard Medical School, Boston, MA<br>\
-		William B. Castle Professor of Medicine (2006 - 2007<br>\
-		Professor of Medicine (1999 - 2007)<br>\
-		Associate Professor of Medicine (1993 - 1999)<br>\
-		Assistant Professor of Medicine (1988 - 1993)\
-        </p></div>		\
-  <div class="item8">Publications</div>  \
-  <div class="item9">Updated publications list on <a href="https://pubmed.ncbi.nlm.nih.gov/?term=Neel+BG" target="_blank">PubMed</a></div>\
-  <div class="item10">Related Links</div>\
-  <div class="item11">\
-			<a href="https://theneellab.com/" target="_blank">The Neel Lab website</a>\
-				 <br>\
-			<a href="https://med.nyu.edu/faculty/benjamin-g-neel" target="_blank"> Benjamin G. Neel NYU Faculty page<a>\
-</div>\
-\
-</div>\
-\
-</body>\
-</html>\
-\
-\
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+.item1 { grid-area: header; text-align: center;font-family: "Open Sans", "Helvetica Neue", sans-serif;  color: #4c6493;
+  font-weight: 700;}
+.item2 { grid-area: aboutme; text-align: left;font-family: "Open Sans", "Helvetica Neue", sans-serif; font-size: 15px;font-weight: 700;
+  letter-spacing: 1px;
+  text-transform: uppercase; color: #4c6493;}
+.item3 { grid-area: right1; text-align: left;font-family: "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 15px;}
+.item4 { grid-area: biotech; text-align: left;font-family: "Open Sans", "Helvetica Neue", sans-serif; font-size: 15px;font-weight: 700;
+  letter-spacing: 1px;
+  text-transform: uppercase; color: #4c6493;}
+.item5 { grid-area: right2; text-align: left;font-family: "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 15px;}
+.item6 { grid-area: academic; text-align: left;font-family: "Open Sans", "Helvetica Neue", sans-serif; font-size: 15px;font-weight: 700;
+  letter-spacing: 1px; 
+  text-transform: uppercase; color: #4c6493;}
+.item7 { grid-area: right3; text-align: left;font-family: "Open Sans", "Helvetica Neue", sans-serif;font-size: 15px;}
+.item8 { grid-area: pubs; text-align: left;font-family: "Open Sans", "Helvetica Neue", sans-serif; font-size: 15px;font-weight: 700;
+  letter-spacing: 1px;
+  text-transform: uppercase; color: #4c6493;}
+.item9 { grid-area: right4; text-align: left;font-family: "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 15px;}
+.item10{ grid-area: related; text-align: left;font-family: "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 15px;font-weight: 700;
+  letter-spacing: 1px;
+  text-transform: uppercase; color: #4c6493;}
+.item11 { grid-area: right5; text-align: left;font-family: "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 15px;}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: auto auto  ;
+  grid-template-areas:
+    'header header'
+    ' aboutme right1'
+    ' biotech right2'
+    ' academic right3'
+    ' pubs right4'
+    ' related right5'
+    ;
+  gap: 5px;
+  background-color: #ffffff;
+  padding: 20px;
 }
+
+.grid-container > div {
+  background-color: rgba(255, 255, 255, 0.8);
+  
+  padding: 20px 0;
+  
+}
+
+.item1 {
+  grid-colum: 1 / 3;
+}
+</style>
+</head>
+<body>
+
+<div class="grid-container">
+  <div class="item1"><img src="ben_neel_half.jpg">
+  <h1>Benjamin G. Neel, M.D., Ph.D.</h1>
+<h2><i>Working to cure cancer in our lifetime.</i></h2>
+</div>
+  <div class="item2">About Me</div>
+  <div class="item3">As a physician-scientist, I believe that we have the best chance of
+ impacting patient survival when scientists and physicians
+work together to understand the biology of cancer and its
+vulnerabilities, and to then translate this understanding from the bench to the bedside.
+					<br>&nbsp; <br>
+	My own research focuses on cellular signaling pathways regulating
+normal cell proliferation and differentiation, and how disruption of these
+pathways can cause human diseases, especially cancer. I have a
+particular interest in the biology and regulation of specific
+molecules called <i>protein-tyrosine
+phosphatases</i> which are involved in many normal cell functions. I also study
+the role of RAS/ERK pathway mutations in developmental diseases and
+cancer, and the biology of breast and ovarian cancers. 
+					<br>&nbsp; <br>
+		I am a member of the <a href="https://aap-online.org/">American Academy of Physicians</a> and the <a href="http://www.nasonline.org/"> National Academy of Sciences</a>. 
+</div>  
+  <div class="item4">Biotech</div>
+  <div class="item5">Lighthorse Therapeutics, co-founder and SAB member<br>
+					<a href="https://navirepharma.com/" target="_blank">Navire Pharma</a>, co-founder and SAB member<br>
+					<a href="https://www.boehringer-ingelheim.com/press-release/acquisitionofnorthernbiologics" target="_blank">Northern Biologics</a>, co-founder. 
+						Acquired by Boehringer Ingelheim in May, 2020<br>
+					<a href="https://www.arvinas.com/" target="_blank">Arvinas, Inc.</a>, SAB Member<br>
+					<a href="https://www.recursion.com/" target="_blank">Recursion</a>, SAB Member</div>
+  <div class="item6">Academic</div>
+  <div class="item7">Laura and Isaac Perlmutter Cancer Center at NYU Langone Medical Center<br>
+  Director (2015 - present)<br>
+  NYU School of Medicine<br>
+  Professor, Department of Medicine (2015 - present)
+  <p>
+  The Campbell Family Institute for Cancer Research, Toronto, ON<br>
+	Founding Director (2008 - 2014)
+    </p>
+    <p>
+	Princess Margaret Hospital Cancer Center, Toronto, ON<br>
+		Director, Research (2007 - 2014)
+        </p><p>
+        University of Toronto, Toronto, ON<br>
+		Professor of Medical Biophysics (2007 - 2015)<br>
+		Canada Research Chair, Tier 1 (2007 - 2015)
+        </p><p>
+        Beth Israel Deaconess Medical Center, Boston, MA<br>
+		Deputy Director, Basic Research, Hematology/Oncology Division (2003 - 2007)<br>
+		Director, Cancer Biology Program (1994 - 2007)<br>
+		</p><p>
+        Harvard Medical School, Boston, MA<br>
+		William B. Castle Professor of Medicine (2006 - 2007<br>
+		Professor of Medicine (1999 - 2007)<br>
+		Associate Professor of Medicine (1993 - 1999)<br>
+		Assistant Professor of Medicine (1988 - 1993)
+        </p></div>		
+  <div class="item8">Publications</div>  
+  <div class="item9">Updated publications list on <a href="https://pubmed.ncbi.nlm.nih.gov/?term=Neel+BG" target="_blank">PubMed</a></div>
+  <div class="item10">Related Links</div>
+  <div class="item11">
+			<a href="https://theneellab.com/" target="_blank">The Neel Lab website</a>
+				 <br>
+			<a href="https://med.nyu.edu/faculty/benjamin-g-neel" target="_blank"> Benjamin G. Neel NYU Faculty page<a>
+</div>
+
+</div>
+
+</body>
+</html>
+
+
