--- a/index2.html
+++ b/index2.html
@@ -29,6 +29,14 @@
   text-transform: uppercase; color: #4c6493;}
 .item11 { grid-area: right5; text-align: left;font-family: "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 15px;}
+.headshot-img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 178px;
+  height: 221px;
+  border-radius: 200px;
+  box-shadow: 0 5px 10px #3A3E4A; }
 
 .grid-container {
   display: grid;
@@ -61,7 +69,7 @@
 <body>
 
 <div class="grid-container">
-  <div class="item1"><img src="ben_neel_half.jpg">
+  <div class="item1"><img src="ben_neel_half.jpg" class=headshot-img>
   <h1>Benjamin G. Neel, M.D., Ph.D.</h1>
 <h2><i>Working to cure cancer in our lifetime.</i></h2>
 </div>
