--- a/index2.html
+++ b/index2.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
+	<meta name="description" content="Benjamin G. Neel, M.D., Ph.D.">
+	<title>Benjamin G. Neel, M.D., Ph.D.</title>
 <style>
 .item1 { grid-area: header; text-align: center;font-family: "Open Sans", "Helvetica Neue", sans-serif;  color: #4c6493;
   font-weight: 700;}
