--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@ cancer, and the biology of breast and ovarian cancers.
 		I am a member of the <a href="https://aap-online.org/">American Academy of Physicians</a> and the <a href="http://www.nasonline.org/"> National Academy of Sciences</a>. 
 </div>  
   <div class="item4">Biotech</div>
-  <div class="item5">Lighthorse Therapeutics, co-founder and SAB member<br>
+	<div class="item5"><a href="https://aethontx.com/" target="_blank">Aethon Therapeutics</a>, Co-Founder and Scientific Advisor<br>
+	  Lighthorse Therapeutics, co-founder and SAB member<br>
 					<a href="https://navirepharma.com/" target="_blank">Navire Pharma</a>, co-founder and SAB member<br>
 					<a href="https://www.boehringer-ingelheim.com/press-release/acquisitionofnorthernbiologics" target="_blank">Northern Biologics</a>, co-founder. 
 						Acquired by Boehringer Ingelheim in May, 2020<br>
