--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@ cancer, and the biology of breast and ovarian cancers.
 </div>  
   <div class="item4">Biotech</div>
 	<div class="item5"><a href="https://aethontx.com/" target="_blank">Aethon Therapeutics</a>, Co-Founder and Scientific Advisor<br>
-	  Lighthorse Therapeutics, co-founder and SAB member<br>
-					<a href="https://navirepharma.com/" target="_blank">Navire Pharma</a>, co-founder and SAB member<br>
+	  Lighthorse Therapeutics, Co-Founder and SAB member<br>
+					<a href="https://navirepharma.com/" target="_blank">Navire Pharma</a>, Co-Founder and SAB member<br>
 					<a href="https://www.boehringer-ingelheim.com/press-release/acquisitionofnorthernbiologics" target="_blank">Northern Biologics</a>, co-founder. 
 						Acquired by Boehringer Ingelheim in May, 2020<br>
 					<a href="https://www.arvinas.com/" target="_blank">Arvinas, Inc.</a>, SAB Member<br>
@@ -106,7 +106,8 @@ cancer, and the biology of breast and ovarian cancers.
   <div class="item7">Laura and Isaac Perlmutter Cancer Center at NYU Langone Medical Center<br>
   Director (2015 - present)<br>
   NYU School of Medicine<br>
-  Professor, Department of Medicine (2015 - present)
+  Professor, Department of Medicine (2015 - present)<br>
+  Associate Dean for Cancer Research (2022 - present)
   <p>
   The Campbell Family Institute for Cancer Research, Toronto, ON<br>
 	Founding Director (2008 - 2014)
