--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ cancer, and the biology of breast and ovarian cancers.
 					<a href="https://www.recursion.com/" target="_blank">Recursion</a>, SAB Member</div>
   <div class="item6">Academic</div>
   <div class="item7">Laura and Isaac Perlmutter Cancer Center at NYU Langone Medical Center<br>
-  Director (2015 - present)<br>
+  Director (2015 - 2023)<br>
   NYU School of Medicine<br>
   Professor, Department of Medicine (2015 - present)<br>
   Associate Dean for Cancer Research (2022 - present)
