--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ cancer, and the biology of breast and ovarian cancers.
   Director (2015 - 2023)<br>
   NYU School of Medicine<br>
   Professor, Department of Medicine (2015 - present)<br>
-  Associate Dean for Cancer Research (2022 - present)
+  Associate Dean for Cancer Research (2022 - 2023)
   <p>
   The Campbell Family Institute for Cancer Research, Toronto, ON<br>
 	Founding Director (2008 - 2014)
