--- a/index.html
+++ b/index.html
@@ -92,13 +92,16 @@ phosphatases</i> which are involved in many normal cell functions. I also study
 the role of RAS/ERK pathway mutations in developmental diseases and
 cancer, and the biology of breast and ovarian cancers. 
 					<br>&nbsp; <br>
-		I am a member of the <a href="https://aap-online.org/">American Academy of Physicians</a> and the <a href="http://www.nasonline.org/"> National Academy of Sciences</a>. 
+		I am a member of the <a href="http://www.nasonline.org/"> National Academy of Sciences</a>, 
+	  the <a href="https://aap-online.org/">American Academy of Physicians</a>, and
+	  the <a href="https://rsc-src.ca/en">Royal Society of Canada</a> (Foreign Member). 
 </div>  
   <div class="item4">Biotech</div>
-	<div class="item5"><a href="https://aethontx.com/" target="_blank">Aethon Therapeutics</a>, Co-Founder and Scientific Advisor<br>
+	<div class="item5"><a href="https://aethontx.com/" target="_blank">Aethon Therapeutics</a>, Co-founder and Scientific Advisor<br>
 	  Lighthorse Therapeutics, Co-Founder and SAB member<br>
-					<a href="https://navirepharma.com/" target="_blank">Navire Pharma</a>, Co-Founder and SAB member<br>
-					<a href="https://www.boehringer-ingelheim.com/press-release/acquisitionofnorthernbiologics" target="_blank">Northern Biologics</a>, co-founder. 
+		<a href="https://kojintx.com/">Kojin Therapeutics, SAB Member</a><br>
+					<a href="https://navirepharma.com/" target="_blank">Navire Pharma</a>, Co-founder and SAB member<br>
+					<a href="https://www.boehringer-ingelheim.com/press-release/acquisitionofnorthernbiologics" target="_blank">Northern Biologics</a>, Co-founder. 
 						Acquired by Boehringer Ingelheim in May, 2020<br>
 					<a href="https://www.arvinas.com/" target="_blank">Arvinas, Inc.</a>, SAB Member<br>
 					<a href="https://www.recursion.com/" target="_blank">Recursion</a>, SAB Member</div>
@@ -125,13 +128,13 @@ cancer, and the biology of breast and ovarian cancers.
 		Director, Cancer Biology Program (1994 - 2007)<br>
 		</p><p>
         Harvard Medical School, Boston, MA<br>
-		William B. Castle Professor of Medicine (2006 - 2007<br>
+		William B. Castle Professor of Medicine (2006 - 2007)<br>
 		Professor of Medicine (1999 - 2007)<br>
 		Associate Professor of Medicine (1993 - 1999)<br>
 		Assistant Professor of Medicine (1988 - 1993)
         </p></div>		
   <div class="item8">Publications</div>  
-  <div class="item9">Updated publications list on <a href="https://pubmed.ncbi.nlm.nih.gov/?term=Neel+BG" target="_blank">PubMed</a></div>
+  <div class="item9">Updated publications list on <a href="https://pubmed.ncbi.nlm.nih.gov/?term=Neel+BG&sort=date&sort_order=desc target="_blank">PubMed</a></div>
   <div class="item10">Related Links</div>
   <div class="item11">
 			<a href="https://theneellab.com/" target="_blank">The Neel Lab website</a>
