--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ cancer, and the biology of breast and ovarian cancers.
   <div class="item4">Biotech</div>
 	<div class="item5"><a href="https://aethontx.com/" target="_blank">Aethon Therapeutics</a>, Co-founder and Scientific Advisor<br>
 	  Lighthorse Therapeutics, Co-Founder and SAB member<br>
-		<a href="https://kojintx.com/">Kojin Therapeutics, SAB Member</a><br>
+		<a href="https://kojintx.com/">Kojin Therapeutics</a>, SAB Member<br>
 					<a href="https://navirepharma.com/" target="_blank">Navire Pharma</a>, Co-founder and SAB member<br>
 					<a href="https://www.boehringer-ingelheim.com/press-release/acquisitionofnorthernbiologics" target="_blank">Northern Biologics</a>, Co-founder. 
 						Acquired by Boehringer Ingelheim in May, 2020<br>
